[project]
name = "cloud-incident-response-openenv"
version = "0.1.0"
description = "OpenEnv environment for cloud SRE incident response"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.58.0",
    "httpx>=0.27.0,<0.29.0",
    "python-dotenv>=1.0.0",
]